# HCMUS-CSC16004-Computer-Vision

Lab 01/Sources/: CMakeLists.txt
Lab 01/Sources/include/: func.hpp
Lab 01/Sources/src/: func.cpp  main.cpp
Sources/: CMakeLists.txt
Sources/include/: func.hpp
Sources/src/: func.cpp  main.cpp
